--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-start">
-              <a href="https://play.google.com/store/apps/dev?id=8886698041923200934" 
+              <a href="https://play.google.com/store/apps/developer?id=Solution+Smart+AI+LLC" 
    target="_blank" 
    class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
   Google Play Store Link
@@ -465,7 +465,7 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-center">
-              <a href="https://play.google.com/store/apps/dev?id=8886698041923200934" 
+              <a href="https://play.google.com/store/apps/developer?id=CLOUTIER+FOR+JUDGE+LLC" 
    target="_blank" 
    class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
   Google Play Store Link
@@ -489,7 +489,7 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-end">
-              <a href="https://play.google.com/store/apps/dev?id=8886698041923200934" 
+              <a href="https://play.google.com/store/apps/developer?id=BRIGADOON+LLC" 
    target="_blank" 
    class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
   Google Play Store Link
@@ -701,3 +701,4 @@
     </script>
   </body>
 </html>
+
